network-policy/egress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: egress-allow-diff-ns
    namespace: blue
spec: 
    podSelector:
        matchLabels:
            color: blue
    egress:
        - to:
            - ipBlock:
                ipBlock: 10.0.1.10
          ports:
            - port: 80
